--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "http://example.org/"
+baseURL = "https://sphit.github.io/Static-WebSite/public/index.html"
 languageCode = "en-us"
 title = "My New Hugo Site"
