--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = "sphit.github.io/Static-WebSite"
+baseURL = "https://sphit.github.io/Static-WebSite/. "
 languageCode = "en-us"
 title = "My New Hugo Site"
